MB-40370: Make cb::xattr::get_body_size resilient to compressed payloads

Any computation on body/xattr sizes must be done on uncompressed values,
the function may trigger or even silently return wrong results.

Change-Id: I6fde1db6ee4f229bf7625b5d43a2272278ab2be1
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/132361
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Well-Formed: Build Bot <build@couchbase.com>