engines/ep/tests/module_tests/dcp_stream_test.cc
@@ -3253,7 +3253,8 @@ TEST_P(SingleThreadedPassiveStreamTest, ConsumerRejectsBodyInSyncDelete) {
 
 void SingleThreadedPassiveStreamTest::testConsumerReceivesUserXattrsInDelete(
         bool sysXattrs,
-        const boost::optional<cb::durability::Requirements>& durReqs) {
+        const boost::optional<cb::durability::Requirements>& durReqs,
+        bool compressed) {
     // UserXattrs in deletion are valid only for connections that enable it
     consumer->public_setIncludeDeletedUserXattrs(IncludeDeletedUserXattrs::Yes);
 
@@ -3273,9 +3274,13 @@ void SingleThreadedPassiveStreamTest::testConsumerReceivesUserXattrsInDelete(
     // - no body
     // - some user-xattrs ("ABCUser[1..6]" + "meta")
     // - maybe the "_sync" sys-xattr
-    auto value = createXattrValue("", sysXattrs);
+    auto value = createXattrValue("", sysXattrs, compressed);
     cb::const_byte_buffer valueBuf{
             reinterpret_cast<const uint8_t*>(value.data()), value.size()};
+    auto datatype = PROTOCOL_BINARY_DATATYPE_XATTR;
+    if (compressed) {
+        datatype |= PROTOCOL_BINARY_DATATYPE_SNAPPY;
+    }
 
     if (durReqs) {
         EXPECT_EQ(ENGINE_SUCCESS,
@@ -3283,7 +3288,7 @@ void SingleThreadedPassiveStreamTest::testConsumerReceivesUserXattrsInDelete(
                                     {"key", DocKeyEncodesCollectionId::No},
                                     valueBuf,
                                     0 /*priv_bytes*/,
-                                    PROTOCOL_BINARY_DATATYPE_XATTR,
+                                    datatype,
                                     0 /*cas*/,
                                     vbid,
                                     0 /*flags*/,
@@ -3300,7 +3305,7 @@ void SingleThreadedPassiveStreamTest::testConsumerReceivesUserXattrsInDelete(
                                      {"key", DocKeyEncodesCollectionId::No},
                                      valueBuf,
                                      0 /*priv_bytes*/,
-                                     PROTOCOL_BINARY_DATATYPE_XATTR,
+                                     datatype,
                                      0 /*cas*/,
                                      vbid,
                                      bySeqno,
@@ -3328,7 +3333,7 @@ void SingleThreadedPassiveStreamTest::testConsumerReceivesUserXattrsInDelete(
                   doc.item->getCommitted());
     }
 
-    ASSERT_EQ(PROTOCOL_BINARY_DATATYPE_XATTR, doc.item->getDataType());
+    ASSERT_EQ(datatype, doc.item->getDataType());
     const auto* data = doc.item->getData();
     const auto nBytes = doc.item->getNBytes();
     const auto ondiskValBuf = cb::char_buffer(const_cast<char*>(data), nBytes);
@@ -3336,12 +3341,10 @@ void SingleThreadedPassiveStreamTest::testConsumerReceivesUserXattrsInDelete(
     // Checkout on-disk value
 
     // No body
-    const auto bodyOffset = cb::xattr::get_body_offset(ondiskValBuf);
-    cb::const_char_buffer bodyBud(data + bodyOffset, nBytes - bodyOffset);
-    ASSERT_EQ(cb::const_char_buffer(""), bodyBud);
-    cb::xattr::Blob blob(ondiskValBuf, false /*compressed*/);
+    ASSERT_EQ(0, cb::xattr::get_body_size(datatype, ondiskValBuf));
 
     // Must have user-xattrs
+    cb::xattr::Blob blob(ondiskValBuf, compressed);
     for (uint8_t i = 1; i <= 6; ++i) {
         EXPECT_FALSE(blob.get("ABCuser" + std::to_string(i)).empty());
     }
@@ -3373,6 +3376,17 @@ TEST_P(SingleThreadedPassiveStreamTest,
        ConsumerReceivesUserXattrsInSyncDelete_NoSysXattr) {
     testConsumerReceivesUserXattrsInDelete(false,
                                            cb::durability::Requirements());
+}
+
+TEST_P(SingleThreadedPassiveStreamTest,
+       ConsumerReceivesUserXattrsInDelete_Compressed) {
+    testConsumerReceivesUserXattrsInDelete(true, {}, true);
+}
+
+TEST_P(SingleThreadedPassiveStreamTest,
+       ConsumerReceivesUserXattrsInSyncDelete_Compressed) {
+    testConsumerReceivesUserXattrsInDelete(
+            true, cb::durability::Requirements(), true);
 }
 
 INSTANTIATE_TEST_CASE_P(AllBucketTypes,
