engines/ep/tests/module_tests/dcp_stream_test.h
@@ -152,10 +152,12 @@ protected:
      *
      * @param sysXattrs Does the tested payload contain sys-xattrs?
      * @param durReqs (optional) The Dur Reqs, if we are testing SyncDelete
+     * @param compressed Is the tested payload compressed?
      */
     void testConsumerReceivesUserXattrsInDelete(
             bool sysXattrs,
-            const boost::optional<cb::durability::Requirements>& durReqs);
+            const boost::optional<cb::durability::Requirements>& durReqs,
+            bool compressed = false);
 
 protected:
     // Should the DcpConsumer have SyncReplication enabled when created in
